--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -318,7 +318,7 @@
   &__container {
     display: flex;
     align-items: center;
-    gap: 7rem;
+    // gap: 7rem;
     margin-bottom: 2.7rem;
 
     @include respond-above("medium") {
@@ -333,10 +333,12 @@
 
     @include respond-above("small") {
       text-align: left;
+      margin-right: 7rem;
     }
 
     @include respond-above("medium") {
       margin-bottom: 4rem;
+      margin-right: 0;
     }
   }
 
@@ -378,18 +380,14 @@
   }
 
   &__stats {
-    gap: 0.8rem;
+    // gap: 0.8rem;
 
     @include respond-above("small") {
       width: 100%;
       flex-direction: row;
-      gap: 1.1rem;
+      // gap: 1.1rem;
       margin: auto;
     }
-
-    // @include respond-above("medium") {
-    //   margin-top: 8.7rem;
-    // }
   }
 
   &__stat {
@@ -397,11 +395,21 @@
     padding: 1.3rem 2.4rem;
     text-transform: uppercase;
 
+    @include respond-below("small") {
+      &:not(:last-child) {
+        margin-bottom: 0.8rem;
+      }
+    }
+
     @include respond-above("small") {
       flex-direction: column;
       align-items: flex-start;
-      gap: 0.4rem;
+      // gap: 0.4rem;
       flex: 1;
+
+      &:not(:last-child) {
+        margin-right: 1.1rem;
+      }
     }
 
     @include respond-above("medium") {
@@ -414,6 +422,10 @@
 
     // TYPOGRAPHY - MOBILE
     font-size: 0.8rem;
+
+    @include respond-above("small") {
+      margin-bottom: 0.4rem;
+    }
 
     @include respond-above("medium") {
       font-size: 1.1rem;
